updated source files to be usable in java 11